<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_all"
            android:icon="@drawable/ic_all_notes"
            android:title="@string/nav_all" />
        <item
            android:id="@+id/nav_notas"
            android:icon="@drawable/ic_note_black_24dp"
            android:title="@string/nav_notas" />
        <item
            android:id="@+id/nav_listas"
            android:icon="@drawable/ic_widget_list"
            android:title="@string/nav_listas" />
        <item
            android:id="@+id/nav_recordatorios"
            android:icon="@drawable/ic_alarm_black_24dp"
            android:title="@string/nav_recordatorios" />
        <item
            android:id="@+id/nav_completadas"
            android:icon="@drawable/ic_check_box_black_24dp"
            android:title="@string/nav_completadas" />
        <item
            android:id="@+id/nav_no_completadas"
            android:icon="@drawable/ic_check_box_outline_blank_black_24dp"
            android:title="@string/nav_no_completadas" />

    </group>

    <item android:title="">
        <menu>
            <item
                android:id="@+id/nav_preferencias"
                android:icon="@drawable/ic_settings_black_24dp"
                android:title="@string/nav_preferencias"/>
        </menu>
    </item>
</menu>
